chore: fetch api

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="style.css" />
 
   <link rel="shortcut icon" href="./assets/dollar-icon.svg" type="image/svg" />
+
+  <script defer src="./main.js"></script>
 </head>
 
 <body>
@@ -58,8 +60,8 @@
           <img src="./assets/bovespa-icon.svg" alt="bovespa" />
 
           <div>
-            <span class="card-title">Índice Bovespa</span>
-            <span class="card-value">0.15%</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -67,8 +69,8 @@
           <img src="./assets/ifix-icon.svg" alt="bovespa" />
 
           <div>
-            <span class="card-title">IFIX</span>
-            <span class="card-value">0.15%</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
       </div>
@@ -82,8 +84,8 @@
           <img src="./assets/dollar-icon.svg" alt="Dólar" />
 
           <div>
-            <span class="card-title">Dólar</span>
-            <span class="card-value">R$ 5.13</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -91,8 +93,8 @@
           <img src="./assets/canadian-dollar-icon.svg" alt="Dólar Canadense" />
 
           <div>
-            <span class="card-title">Dólar Canadense</span>
-            <span class="card-value">R$ 5.13</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -100,8 +102,8 @@
           <img src="./assets/australian-dollar-icon.svg" alt="Dólar Australiano" />
 
           <div>
-            <span class="card-title">Dólar Australiano</span>
-            <span class="card-value">R$ 3.49</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -109,8 +111,8 @@
           <img src="./assets/euro-icon.svg" alt="Euro" />
 
           <div>
-            <span class="card-title">Euro</span>
-            <span class="card-value">R$ 5.44</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -118,8 +120,8 @@
           <img src="./assets/libra-icon.svg" alt="Libra" />
 
           <div>
-            <span class="card-title">Libra</span>
-            <span class="card-value">R$ 6.17</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -127,8 +129,8 @@
           <img src="./assets/peso-argentino.svg" alt="Peso Argentino" />
 
           <div>
-            <span class="card-title">Peso Argentino</span>
-            <span class="card-value">R$ 0.012</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -136,8 +138,8 @@
           <img src="./assets/yen-icon.svg" alt="Yen" />
 
           <div>
-            <span class="card-title">Yen</span>
-            <span class="card-value">R$ 0.03</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -145,8 +147,8 @@
           <img src="./assets/yuan-icon.svg" alt="Yuan" />
 
           <div>
-            <span class="card-title">Yuan</span>
-            <span class="card-value">R$ 0.74</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
 
@@ -154,8 +156,8 @@
           <img src="./assets/bitcoin-icon.svg" alt="Bitcoin" />
 
           <div>
-            <span class="card-title">Bitcoin</span>
-            <span class="card-value">R$ 123.145,19</span>
+            <span class="card-title">-</span>
+            <span class="card-value">-</span>
           </div>
         </div>
       </div>
