chore: fetch api

--- a/index.html
+++ b/index.html
@@ -52,112 +52,148 @@
       <p>Última atualização às 23:59h</p>
     </div>
 
-    <section class="quotes">
+    <section class="container-values stocks">
       <h3>Ações</h3>
       <div class="line"></div>
-      <div class="quotes-content">
+      <div class="content">
         <div class="cards">
           <img src="./assets/bovespa-icon.svg" alt="bovespa" />
 
-          <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+          <div data-id="IBOVESPA">
+            <span class="card-title" data-id="IBOVESPA">-</span>
+            <span class="card-value" data-id="IBOVESPA">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="IFIX">
           <img src="./assets/ifix-icon.svg" alt="bovespa" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="IFIX">-</span>
+            <span class="card-value" data-id="IFIX">-</span>
+          </div>
+        </div>
+
+        <div class="cards" data-id="CAC">
+          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+
+          <div>
+            <span class="card-title" data-id="CAC">-</span>
+            <span class="card-value" data-id="CAC">-</span>
+          </div>
+        </div>
+
+        <div class="cards" data-id="DOWJONES">
+          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+
+          <div>
+            <span class="card-title" data-id="DOWJONES">-</span>
+            <span class="card-value" data-id="DOWJONES">-</span>
+          </div>
+        </div>
+
+        <div class="cards" data-id="NASDAQ">
+          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+
+          <div>
+            <span class="card-title" data-id="NASDAQ">-</span>
+            <span class="card-value" data-id="NASDAQ">-</span>
+          </div>
+        </div>
+
+        <div class="cards" data-id="NIKKEI">
+          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+
+          <div>
+            <span class="card-title" data-id="NIKKEI">-</span>
+            <span class="card-value" data-id="NIKKEI">-</span>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="quotes">
+    <section class="container-values quotes">
       <h3>Cotações</h3>
       <div class="line"></div>
-      <div class="quotes-content">
-        <div class="cards">
+      <div class="content">
+        <div class="cards" data-id="USD">
           <img src="./assets/dollar-icon.svg" alt="Dólar" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="USD">-</span>
+            <span class="card-value" data-id="USD">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="CAD">
           <img src="./assets/canadian-dollar-icon.svg" alt="Dólar Canadense" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="CAD">-</span>
+            <span class="card-value" data-id="CAD">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="AUD">
           <img src="./assets/australian-dollar-icon.svg" alt="Dólar Australiano" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="AUD">-</span>
+            <span class="card-value" data-id="AUD">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="EUR">
           <img src="./assets/euro-icon.svg" alt="Euro" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="EUR">-</span>
+            <span class="card-value" data-id="EUR">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="GBP">
           <img src="./assets/libra-icon.svg" alt="Libra" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="GBP">-</span>
+            <span class="card-value" data-id="GBP">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="ARS">
           <img src="./assets/peso-argentino.svg" alt="Peso Argentino" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="ARS">-</span>
+            <span class="card-value" data-id="ARS">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="JPY">
           <img src="./assets/yen-icon.svg" alt="Yen" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="JPY">-</span>
+            <span class="card-value" data-id="JPY">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="CNY">
           <img src="./assets/yuan-icon.svg" alt="Yuan" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="CNY">-</span>
+            <span class="card-value" data-id="CNY">-</span>
           </div>
         </div>
 
-        <div class="cards">
+        <div class="cards" data-id="BTC">
           <img src="./assets/bitcoin-icon.svg" alt="Bitcoin" />
 
           <div>
-            <span class="card-title">-</span>
-            <span class="card-value">-</span>
+            <span class="card-title" data-id="BTC">-</span>
+            <span class="card-value" data-id="BTC">-</span>
           </div>
         </div>
       </div>
