--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="update">
       <span class="notification"></span>
 
-      <p>Última atualização às 23:59h</p>
+      <p id="date-hour"></p>
     </div>
 
     <section class="container-values stocks">
@@ -57,7 +57,7 @@
       <div class="line"></div>
       <div class="content">
         <div class="cards">
-          <img src="./assets/bovespa-icon.svg" alt="bovespa" />
+          <img src="./assets/stock-icon.svg" alt="bovespa" />
 
           <div data-id="IBOVESPA">
             <span class="card-title" data-id="IBOVESPA">-</span>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="cards" data-id="IFIX">
-          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+          <img src="./assets/stock-icon.svg" alt="IFIX" />
 
           <div>
             <span class="card-title" data-id="IFIX">-</span>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="cards" data-id="CAC">
-          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+          <img src="./assets/stock-icon.svg" alt="cac" />
 
           <div>
             <span class="card-title" data-id="CAC">-</span>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="cards" data-id="DOWJONES">
-          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+          <img src="./assets/stock-icon.svg" alt="DOWJONES" />
 
           <div>
             <span class="card-title" data-id="DOWJONES">-</span>
@@ -93,7 +93,7 @@
         </div>
 
         <div class="cards" data-id="NASDAQ">
-          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+          <img src="./assets/stock-icon.svg" alt="NASDAQ" />
 
           <div>
             <span class="card-title" data-id="NASDAQ">-</span>
@@ -102,7 +102,7 @@
         </div>
 
         <div class="cards" data-id="NIKKEI">
-          <img src="./assets/ifix-icon.svg" alt="bovespa" />
+          <img src="./assets/stock-icon.svg" alt="NIKKEI" />
 
           <div>
             <span class="card-title" data-id="NIKKEI">-</span>
@@ -203,7 +203,6 @@
       <a href="https://birobirobiro.dev" target="_blank">birobirobiro.dev</a>
     </footer>
   </div>
-
 </body>
 
 </html>
