--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <img src="./assets/stock-icon.svg" alt="bovespa" />
 
           <div data-id="IBOVESPA">
-            <span class="card-title" data-id="IBOVESPA">-</span>
+            <span class="card-title">Índice IBOVESPA</span>
             <span class="card-value" data-id="IBOVESPA">-</span>
           </div>
         </div>
@@ -69,7 +69,7 @@
           <img src="./assets/stock-icon.svg" alt="IFIX" />
 
           <div>
-            <span class="card-title" data-id="IFIX">-</span>
+            <span class="card-title">IFIX</span>
             <span class="card-value" data-id="IFIX">-</span>
           </div>
         </div>
@@ -78,7 +78,7 @@
           <img src="./assets/stock-icon.svg" alt="cac" />
 
           <div>
-            <span class="card-title" data-id="CAC">-</span>
+            <span class="card-title">CAC</span>
             <span class="card-value" data-id="CAC">-</span>
           </div>
         </div>
@@ -87,7 +87,7 @@
           <img src="./assets/stock-icon.svg" alt="DOWJONES" />
 
           <div>
-            <span class="card-title" data-id="DOWJONES">-</span>
+            <span class="card-title">DOWJONES</span>
             <span class="card-value" data-id="DOWJONES">-</span>
           </div>
         </div>
@@ -96,7 +96,7 @@
           <img src="./assets/stock-icon.svg" alt="NASDAQ" />
 
           <div>
-            <span class="card-title" data-id="NASDAQ">-</span>
+            <span class="card-title">NASDAQ</span>
             <span class="card-value" data-id="NASDAQ">-</span>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <img src="./assets/stock-icon.svg" alt="NIKKEI" />
 
           <div>
-            <span class="card-title" data-id="NIKKEI">-</span>
+            <span class="card-title">NIKKEI</span>
             <span class="card-value" data-id="NIKKEI">-</span>
           </div>
         </div>
@@ -120,7 +120,7 @@
           <img src="./assets/dollar-icon.svg" alt="Dólar" />
 
           <div>
-            <span class="card-title" data-id="USD">-</span>
+            <span class="card-title">Dólar</span>
             <span class="card-value" data-id="USD">-</span>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <img src="./assets/canadian-dollar-icon.svg" alt="Dólar Canadense" />
 
           <div>
-            <span class="card-title" data-id="CAD">-</span>
+            <span class="card-title">Dólar Canadense</span>
             <span class="card-value" data-id="CAD">-</span>
           </div>
         </div>
@@ -138,7 +138,7 @@
           <img src="./assets/australian-dollar-icon.svg" alt="Dólar Australiano" />
 
           <div>
-            <span class="card-title" data-id="AUD">-</span>
+            <span class="card-title">Dólar Australiano</span>
             <span class="card-value" data-id="AUD">-</span>
           </div>
         </div>
@@ -147,7 +147,7 @@
           <img src="./assets/euro-icon.svg" alt="Euro" />
 
           <div>
-            <span class="card-title" data-id="EUR">-</span>
+            <span class="card-title">Euro</span>
             <span class="card-value" data-id="EUR">-</span>
           </div>
         </div>
@@ -156,7 +156,7 @@
           <img src="./assets/libra-icon.svg" alt="Libra" />
 
           <div>
-            <span class="card-title" data-id="GBP">-</span>
+            <span class="card-title">Libra</span>
             <span class="card-value" data-id="GBP">-</span>
           </div>
         </div>
@@ -165,7 +165,7 @@
           <img src="./assets/peso-argentino.svg" alt="Peso Argentino" />
 
           <div>
-            <span class="card-title" data-id="ARS">-</span>
+            <span class="card-title">Peso Argentino</span>
             <span class="card-value" data-id="ARS">-</span>
           </div>
         </div>
@@ -174,7 +174,7 @@
           <img src="./assets/yen-icon.svg" alt="Yen" />
 
           <div>
-            <span class="card-title" data-id="JPY">-</span>
+            <span class="card-title">Yen</span>
             <span class="card-value" data-id="JPY">-</span>
           </div>
         </div>
@@ -183,7 +183,7 @@
           <img src="./assets/yuan-icon.svg" alt="Yuan" />
 
           <div>
-            <span class="card-title" data-id="CNY">-</span>
+            <span class="card-title">Yuan</span>
             <span class="card-value" data-id="CNY">-</span>
           </div>
         </div>
@@ -192,7 +192,7 @@
           <img src="./assets/bitcoin-icon.svg" alt="Bitcoin" />
 
           <div>
-            <span class="card-title" data-id="BTC">-</span>
+            <span class="card-title">Bitcoin</span>
             <span class="card-value" data-id="BTC">-</span>
           </div>
         </div>
