--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <img src="./assets/stock-icon.svg" alt="bovespa" />
 
           <div data-id="IBOVESPA">
-            <span class="card-title">Índice IBOVESPA</span>
+            <span class="card-title">Índice Bovespa</span>
             <span class="card-value" data-id="IBOVESPA">-</span>
           </div>
         </div>
