chore: add google adsense

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <link rel="shortcut icon" href="./assets/dollar-icon.svg" type="image/svg" />
 
   <script defer src="./main.js"></script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
